selfhost/test/typechecker/funcdecl/error_invalid_return_type.out
Error at %FILE_NAME%:1:19
Unknown type 'Bogus'
  |  func foo(f: Int): Bogus {}
                       ^
No type with that name is visible in current scope
