selfhost/test/typechecker/funcdecl/error_invalid_return_type.abra
func foo(f: Int): Bogus {}